# cyberiadaml-py

./: .gitignore  pyproject.toml
.github/workflows/: flake8.yaml  types.yaml  typeсheck.yaml
cyberiadaml_py/: __main__.py  cyberiadaml.py  cyberiadaml_builder.py  cyberiadaml_parser.py
cyberiadaml_py/types/: cgml_schema.py  cgml_scheme.py  common.py  elements.py
demos/: CyberiadaFormat-Autoborder.graphml  CyberiadaFormat-Blinker.graphml  two-blinkers.graphml  with-shallow-history.graphml
tests/: __init__.py  func_direct.xml  func_sum.xml  test_builderfunc.py  test_parce_cgml.py  test_parse_cgml.py  test_parser.py  test_spit_graph_in_builder.py  test_spit_graph_in_parser.py  test_split_graph.py  testfile_for_func.xml
